@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-22T16:24:36Z",
-  "count_outdated" : 529,
-  "uniques_outdated" : 306,
-  "count" : 564,
+  "timestamp" : "2022-09-23T01:53:23Z",
+  "count_outdated" : 531,
+  "uniques_outdated" : 307,
+  "count" : 565,
   "uniques" : 325,
   "clones" : [
-    {
-      "timestamp": "2022-09-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-09T00:00:00Z",
       "count": 3,
